--- a/web_static/styles/100-places.css
+++ b/web_static/styles/100-places.css
@@ -19,23 +19,24 @@
     margin: 20px;
     border: #FF5A5F solid 1px;
     border-radius: 4px;
-    grid-row-start: 2;
-    display: flex;
-    order: 2;
+    display: flex;    
     flex-direction: row;
     flex-wrap: wrap;
     align-content: space-between;
 }
-
-.places h2 {
+.place_name {
+    width: 100%;
+    height: 100px;
+    position: relative;
+}
+.place_name h2 {
     font-size: 30px;
     text-align: center;
-    width: 75%;
-    align-content: center;
+    padding-top: 0;
+    margin-top: 0;
 }
 
 .price_by_night {
-    color: #FF5A5F;
     border: #FF5A5F solid 4px;
     border-radius: 50%;
     text-align: center;
@@ -43,10 +44,13 @@
     width: 80px;
     height: 80px;
     font-size: 30px;
-    line-height: 70px;
     margin-bottom: 10px;
-
+    position: absolute;
+    top: 0%;
+    right: 0%;
 }
+
+/* Information Section */
 
 .information {
     height: 80px;
@@ -57,8 +61,8 @@
     flex-flow: row nowrap;
     justify-content: space-around;
     width: 100%;
+    padding: 15px 0;
 }
-
 .max_guest {
     text-align: center;
     display: flex;
@@ -66,7 +70,6 @@
     justify-content: center;
     align-items: center;
 }
-
 .number_rooms {
     text-align: center;
     display: flex;
@@ -74,7 +77,6 @@
     justify-content: center;
     align-items: center;
 }
-
 .number_bathrooms {
     text-align: center;
     display: flex;
@@ -82,45 +84,42 @@
     justify-content: center;
     align-items: center;
 }
-
 .icon_guest {
     background-image: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_group.png');
     width: 50px;
     height: 50px;
 }
-
 .icon_bed {
     background-image: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_bed.png');
     width: 50px;
     height: 50px;
 }
-
 .icon_bath {
     background-image: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_bath.png');
     width: 50px;
     height: 50px;
 }
+.information p {
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+
+/* User section*/
 
 .user {
     padding: 10px 0;
 }
 
+/* Amenities Section */
+
 .places .amenities {
     margin-top: 40px;
+    padding: 0;
     text-align: left;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
+    list-style-type: none;    
     width: 100%;
+    height: auto;
 }
-
-.places .reviews {
-    margin-top: 40px;
-    text-align: left;
-    list-style-type: none;
-    width: 100%;
-}
-
 .places .amenities h2 {
     font-size: 16px;
     border-bottom: #DDDDDD solid 1px;
@@ -128,54 +127,61 @@
     padding-bottom: 10px;
     width: 100%;
 }
+.places .amenities ul {
+    list-style-type: none;
+    padding: 10px 0;
+}
+.places .amenities li {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    align-items: center;
+}
+.amenity_container {
+    width: 50px;
+    height: 50px;
+    object-fit: fill;    
+}
+.tv_icon {
+    background-image: url("../images/icon_tv.png");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+}
+.wifi_icon {
+    background-image: url("../images/icon_wifi.png");
+    width: 50px;
+    height: 50px;
+}
+.pets_icon {
+    background-image: url("../images/icon_pets.png");
+    width: 50px;
+    height: 50px;
+}
 
-.places .reviews h2 {
+/* Reviews Section */
+.reviews {
+    margin-top: 40px;
+    text-align: left;
+    list-style-type: none;
+    width: 100%;
+}
+.reviews h2 {
     font-size: 16px;
     border-bottom: #DDDDDD solid 1px;
     text-align: left;
     padding-bottom: 10px;
     width: 100%;
 }
-
-.places .amenities ul {
+.reviews ul {
     list-style-type: none;
-    padding-top: 20px;
+    padding: 10px 0;
 }
-
-.places .amenities li {
-    display: flex;
-    text-align: justify;
-}
-
-.places .reviews ul {
-    list-style-type: none;
-    padding-top: 20px;
-}
-
-.tv_icon {
-    background-image: url("https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_tv.png");
-    width: 50px;
-    height: 50px;
-}
-
-.wifi_icon {
-    background-image: url("https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_wifi.png");
-    width: 50px;
-    height: 50px;
-}
-
-.pets_icon {
-    background-image: url("https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_pets.png");
-    width: 50px;
-    height: 50px;
-}
-
-.places .amenities li p {
-    padding: 20px;
-}
-
 .places .reviews h3 {
     font-size: 14px;
     text-align: left;
-    margin: 10px auto;
+}
+.places .reviews p {
+    font-size: 12px;
+    text-align: left;
 }
