--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -1,187 +1,157 @@
-.places {
-    width: 100%;
-    display: flex;
-    margin-top: 20px;
-    flex-flow: row wrap;
-    justify-content: center;
+.places h1 {
+	text-align: left;
+	font-size: 30px;
+	width: 100%;
 }
 
-.places h1 {
-    font-size: 30px;
-    text-align: left;
-    padding: 15px;
-    flex-basis: 90%;
+.places {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 100%;
+	box-sizing: border-box;
+	padding-bottom: 60px;
 }
 
 .places article {
-    width: 390px;
-    padding: 20px;
-    margin: 20px;
-    border: #FF5A5F solid 1px;
-    border-radius: 4px;
-    display: flex;    
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: space-between;
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
+	text-align: center;
+	position: relative;
 }
-.place_name {
-    width: 100%;
-    height: 100px;
-    position: relative;
-}
-.place_name h2 {
-    font-size: 30px;
-    text-align: center;
-    padding-top: 0;
-    margin-top: 0;
+
+.places article h2 {
+	display: inline-block;
+	margin-top: 0px;
+	margin-bottom: 30px;
 }
 
 .price_by_night {
-    border: #FF5A5F solid 4px;
-    border-radius: 50%;
-    text-align: center;
-    min-width: 60px;
-    width: 80px;
-    height: 80px;
-    font-size: 30px;
-    margin-bottom: 10px;
-    position: absolute;
-    top: 0%;
-    right: 0%;
+	color: #FF5A5F;
+	border: 4px solid #FF5A5F;
+	border-radius: 100%;
+	min-width: 60px;
+	height: 60px;
+	font-size: 25px;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-
-/* Information Section */
 
 .information {
-    height: 80px;
-    border-bottom: #DDDDDD solid 1px;
-    border-top: #DDDDDD solid 1px;
-    display: flex;
-    font-size: 16px;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    width: 100%;
-    padding: 15px 0;
-}
-.max_guest {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.number_rooms {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.number_bathrooms {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.icon_guest {
-    background-image: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_group.png');
-    width: 50px;
-    height: 50px;
-}
-.icon_bed {
-    background-image: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_bed.png');
-    width: 50px;
-    height: 50px;
-}
-.icon_bath {
-    background-image: url('https://s3.amazonaws.com/intranet-projects-files/holbertonschool-higher-level_programming+/268/icon_bath.png');
-    width: 50px;
-    height: 50px;
-}
-.information p {
-    margin-bottom: 0;
-    padding-bottom: 0;
+	height: 80px;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
 }
 
-/* User section*/
+.information div {
+	height: 70px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+.max_guest {
+	width: 100px;
+	background-image: url("../images/icon_group.png");
+	background-repeat: no-repeat;
+	background-position: 50% 0;
+}
+
+.number_rooms {
+	width: 100px;
+	background-image: url("../images/icon_bed.png");
+	background-repeat: no-repeat;
+	background-position: 50% 0;
+}
+
+.number_bathrooms {
+	width: 100px;
+	background-image: url("../images/icon_bath.png");
+	background-repeat: no-repeat;
+	background-position: 50% 0;
+}
 
 .user {
-    padding: 10px 0;
+	text-align: left;
+	margin-top: 15px;
+	margin-bottom: 10px;
 }
 
-/* Amenities Section */
+.description {
+	text-align: left;
+}
 
 .places .amenities {
-    margin-top: 40px;
-    padding: 0;
-    text-align: left;
-    list-style-type: none;    
-    width: 100%;
-    height: auto;
-}
-.places .amenities h2 {
-    font-size: 16px;
-    border-bottom: #DDDDDD solid 1px;
-    text-align: left;
-    padding-bottom: 10px;
-    width: 100%;
-}
-.places .amenities ul {
-    list-style-type: none;
-    padding: 10px 0;
-}
-.places .amenities li {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    align-items: center;
-}
-.amenity_container {
-    width: 50px;
-    height: 50px;
-    object-fit: fill;    
-}
-.tv_icon {
-    background-image: url("../images/icon_tv.png");
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-}
-.wifi_icon {
-    background-image: url("../images/icon_wifi.png");
-    width: 50px;
-    height: 50px;
-}
-.pets_icon {
-    background-image: url("../images/icon_pets.png");
-    width: 50px;
-    height: 50px;
+	margin-top: 40px;
+	width: 100%;
 }
 
-/* Reviews Section */
-.reviews {
-    margin-top: 40px;
-    text-align: left;
-    list-style-type: none;
-    width: 100%;
-}
+.places .amenities h2,
 .reviews h2 {
-    font-size: 16px;
-    border-bottom: #DDDDDD solid 1px;
-    text-align: left;
-    padding-bottom: 10px;
-    width: 100%;
+	font-size: 16px;
+	width: 100%;
+	text-align: left;
+	border-bottom: 1px solid #DDDDDD;
+	padding-bottom: 10px;
 }
+
+.places .amenities ul,
 .reviews ul {
-    list-style-type: none;
-    padding: 10px 0;
+	list-style: none;
+	padding-inline-start: 0;
+	margin: 0px;
 }
-.places .reviews h3 {
-    font-size: 14px;
-    text-align: left;
+
+.places .amenities ul li {
+	background-repeat: no-repeat;
+	background-position: left center;
+	background-size: 20px;
+	text-align: left;
+	padding: 5px 5px 5px 35px;
 }
-.places .reviews p {
-    font-size: 12px;
-    text-align: left;
+
+li.tv {
+	background-image: url("../images/icon_tv.png");
+}
+
+li.wifi {
+	background-image: url("../images/icon_wifi.png");
+}
+
+li.pets {
+	background-image: url("../images/icon_pets.png");
+}
+
+.reviews {
+	margin-top: 40px;
+}
+
+.reviews li {
+	text-align: left;
+	padding: 0px;
+}
+
+.reviews li h3 {
+	font-size: 14px;
+	margin: 0px;
+}
+
+.reviews li p {
+	font-size: 12px;
+	margin: 0px;
+	margin-bottom: 15px;
 }
