--- a/web_static/styles/103-filters.css
+++ b/web_static/styles/103-filters.css
@@ -3,25 +3,44 @@
 	height: 70px;
 	width: 100%;
 	border: 1px solid #DDDDDD;
-	border-radius: 4px;
+	border-radius: 40px;
 	display: flex;
 	align-items: center;
 }
 
 .filters button {
-	font-size: 18px;
-	background-color: #FF5A5F;
-	color: #FFFFFF;
-	height: 48px;
-	width: 20%;
+	font-size: 20px;
+	background-color: #FFF5F8;
+	color: #595959;
+	height: 50px;
+	width: 150px;
 	border: none;
-	border-radius: 4px;
-	margin-right: 30px;
+	border: 1px solid #DDDDDD;
+	border-radius: 40px;
+	margin-right: 15px;
 	margin-left: auto;
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+}
+
+.filters button::before {
+	content: "";
+	height: 40px;
+	width: 40px;
+	margin-left: 3px;
+	margin-right: 10px;
+	border-radius: 100%;
+	background-color: #ff395c;
+	background-image: url("../images/search.png");
+	display: inline-block;
+	background-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
 }
 
 .filters button:hover {
-	opacity: 0.9;
+	background-color: #ffe7eb;
 }
 
 .locations,
@@ -94,15 +113,28 @@
 	}
 
 	.filters button {
-		font-size: 0px;
 		height: 55px;
 		width: 55px;
 		border-radius: 100%;
 		margin-right: 5px;
+		background-color: #ff395c;
 		background-image: url("../images/search.png");
 		background-size: 25px;
 		background-repeat: no-repeat;
 		background-position: 50% 50%;
+	}
+
+	.filters button::before {
+		display: none;
+	}
+
+	.filters button span {
+		display: none;
+	}
+
+	.filters button:hover {
+		background-color: #ff395c;
+		opacity: 0.8;
 	}
 
 	.locations,
