--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,12 +1,10 @@
 footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #00FF00;
-    height: 60px;
-}
-
-footer p {
-    text-align: center;
-    margin: 20px;
+  background-color: #00ff00;
+  height: 60px;
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
