--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -1,48 +1,53 @@
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+	background-color: #FFFFFF;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	display: flex;
+	align-items: center;
 }
 
-section.filters button{
-    font-size: 18px;
-    color: white;
-    background-color: #FF5A5F;
-    height: 48px;
-    border: 0px;
-    border-radius: 4px;
-    width: 20%;
-    margin-left: auto;
-    margin-right: 30px;
-    opacity: 1;
+.filters button {
+	font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	border: none;
+	border-radius: 4px;
+	margin-right: 30px;
+	margin-left: auto;
 }
 
-section.filters button:hover {
-    opacity: 0.9;
+.filters button:hover {
+	opacity: 0.9;
 }
 
-.locations, .amenities {
-    height: 100%;
-    width: 25%;
-    padding-left: 50px;
+.locations,
+.amenities {
+	height: 100%;
+	width: 25%;
+	padding-left: 40px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
 }
 
 .locations {
-    border-right: 1px solid #DDDDDD;
+	border-right: 1px solid #DDDDDD;
 }
 
-.locations h3, .amenities h3 {
-    font-weight: 600;
-    margin: 12px 0 5px 0;
+.filter-title {
+	font-weight: 600;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
 
-.locations h4, .amenities h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 0 0 0 0;
+.filter-subtitle {
+	font-weight: 400;
+	font-size: 14px;
+	margin-top: 0px;
+	margin-bottom: 0px;
 }
