--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,91 +1,87 @@
 .filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
+	background-color: #FFFFFF;
+	height: 70px;
+	width: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	display: flex;
+	align-items: center;
 }
 
-section.filters > button{
-    font-size: 18px;
-    color: white;
-    background-color: #FF5A5F;
-    height: 48px;
-    border: 0px;
-    border-radius: 4px;
-    width: 20%;
-    margin-left: auto;
-    margin-right: 30px;
-    opacity: 1;
+.filters button {
+	font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	border: none;
+	border-radius: 4px;
+	margin-right: 30px;
+	margin-left: auto;
 }
 
-section.filters > button:hover {
-    opacity: 0.9;
+.filters button:hover {
+	opacity: 0.9;
 }
 
-.locations, .amenities {
-    height: 100%;
-    width: 25%;
-    padding-left: 50px;
+.locations,
+.filters .amenities {
+	height: 100%;
+	width: 25%;
+	position: relative;
 }
 
 .locations {
-    border-right: 1px solid #DDDDDD;
-}
-.locations > h3, .amenities > h3 {
-    font-weight: 600;
-    margin: 12px 0 5px 0;
+	border-right: 1px solid #DDDDDD;
 }
 
-.locations > h4, .amenities > h4 {
-    font-weight: 400;
-    font-size: 14px;
-    margin: 0 0 5px 0;
+.filter-title {
+	font-weight: 600;
+	margin-top: 15px;
+	margin-bottom: 0px;
+	margin-left: 40px;
+}
+
+.filter-subtitle {
+	font-weight: 400;
+	font-size: 14px;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	margin-left: 40px;
+}
+
+.locations:hover .popover,
+.filters .amenities:hover .popover {
+	display: block;
 }
 
 .popover {
-    display: none;
-    position: relative;
-    left: -51px;
-    background-color: #FAFAFA;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
-    z-index: 1;
-    padding: 30px 50px 30px 0;
-    margin-top: 17px;
-}
-
-.popover, .popover ul {
-    list-style-type: none;
-}
-.locations:hover > .popover {
-    display: block;
-}
-
-.amenities:hover > .popover {
-    display: block;
+	background-color: #FAFAFA;
+	border: 1px solid #DDDDDD;
+	border-radius: 4px;
+	list-style-type: none;
+	display: none;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	box-sizing: border-box;
+	margin-top: 70px;
+	padding: 30px;
+	padding-top: 20px;
+	z-index: 1000;
 }
 
 .popover h2 {
-    margin-top: 0px;
-    margin-bottom: 5px;
+	font-size: 16px;
+	margin-bottom: 0px;
 }
 
-.locations > .popover > li {
-    margin-bottom: 30px;
-    margin-left: 30px;
-}
-.locations > .popover > li > ul {
-    padding-left: 20px;
-}
-.locations > .popover > li > ul > li {
-    margin-bottom: 10px;
+.popover ul {
+	width: 100%;
+	list-style-type: none;
+	padding-inline-start: 15px;
 }
 
-.amenities > .popover > li {
-    margin-left: 50px;
-    margin-bottom: 10px;
+.popover li {
+	padding: 3px;
 }
