--- a/web_static/styles/7-places.css
+++ b/web_static/styles/7-places.css
@@ -1,29 +1,22 @@
+.places h1 {
+	text-align: left;
+	font-size: 30px;
+	width: 100%;
+}
+
 .places {
-    width: 100%;
-    border: 0;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 100%;
+	box-sizing: border-box;
 }
 
-.places > h1 {
-    font-size: 30px;
-    padding-left: 20px;
-    padding-top: 20px;
-    margin-bottom: 0px;
-    flex: 0 1 100%;
-}
-.places > article {
-    width: 390px;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 20px 20px 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    display: flex;
-    justify-content: center;
-}
-
-.places > article > h2 {
-    font-size: 30px;
+.places article {
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
+	text-align: center;
 }
