--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,107 +1,96 @@
+.places h1 {
+	text-align: left;
+	font-size: 30px;
+	width: 100%;
+}
+
 .places {
-    width: 100%;
-    border: 0;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 100%;
+	box-sizing: border-box;
+	padding-bottom: 60px;
 }
 
-.places > h1 {
-    font-size: 30px;
-    padding-left: 20px;
-    padding-top: 20px;
-    margin-bottom: 0px;
-    flex: 0 1 100%;
-}
-.places > article {
-    width: 390px;
-    padding: 20px 20px 20px 20px;
-    margin: 20px 20px 20px 20px;
-    border: 1px solid #FF5A5F;
-    border-radius: 4px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: relative;
+.places article {
+	width: 390px;
+	padding: 20px;
+	margin: 20px;
+	border: 1px solid #FF5A5F;
+	border-radius: 4px;
+	text-align: center;
+	position: relative;
 }
 
-.places > article > h2 {
-    font-size: 30px;
-    margin: 0 0 0 0;
-    align-self: center;
+.places article h2 {
+	display: inline-block;
+	margin-top: 0px;
+	margin-bottom: 30px;
 }
 
 .price_by_night {
-    color: #FF5A5F;
-    border: 4px solid #FF5A5F;
-    min-width: 60px;
-    height: 60px;
-    font-size: 30px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-}
-.price_by_night > p {
-    margin: 0 0 0 0;
+	color: #FF5A5F;
+	border: 4px solid #FF5A5F;
+	border-radius: 100%;
+	min-width: 60px;
+	height: 60px;
+	font-size: 30px;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .information {
-    align-self: center;
-    height: 80px;
-    width: 100%;
-    border-top: 1px solid #DDDDDD;
-    border-bottom: 1px solid #DDDDDD;
-    margin-top: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	height: 80px;
+	border-top: 1px solid #DDDDDD;
+	border-bottom: 1px solid #DDDDDD;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
 }
 
-.max_guest, .number_rooms, .number_bathrooms {
-    width: 100px;
-    text-align: center;
+.information div {
+	height: 70px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: flex-end;
 }
 
-.max_guest > p, .number_rooms > p, .number_bathrooms > p{
-    margin-top: auto;
-    margin-bottom: auto;
+.max_guest {
+	width: 100px;
+	background-image: url("../images/icon_group.png");
+	background-repeat: no-repeat;
+	background-position: 50% 0;
 }
 
-.guest_image {
-    margin-left: auto;
-    margin-right: auto;
-    height: 50px;
-    width: 50px;
-    background: url("../images/icon_group.png") no-repeat center;
+.number_rooms {
+	width: 100px;
+	background-image: url("../images/icon_bed.png");
+	background-repeat: no-repeat;
+	background-position: 50% 0;
 }
 
-.bed_image {
-    margin-left: auto;
-    margin-right: auto;
-    height: 50px;
-    width: 50px;
-    background: url("../images/icon_bed.png") no-repeat center;
+.number_bathrooms {
+	width: 100px;
+	background-image: url("../images/icon_bath.png");
+	background-repeat: no-repeat;
+	background-position: 50% 0;
 }
 
-.bath_image {
-    margin-left: auto;
-    margin-right: auto;
-    height: 50px;
-    width: 50px;
-    background: url("../images/icon_bath.png") no-repeat center;
+.user {
+	text-align: left;
+	margin-top: 15px;
+	margin-bottom: 10px;
 }
 
-.user > p {
-    margin-top: 20px;
-    margin-bottom: 0px;
-}
-.description > p {
-    margin-top: 7px;
-    margin-bottom: 0px;
+.description {
+	text-align: left;
 }
