--- a/web_static/styles/102-filters.css
+++ b/web_static/styles/102-filters.css
@@ -91,12 +91,13 @@
 @media only screen and (max-width: 769px) {
 	.filters {
 		border-radius: 40px;
+		height: 45px;
 	}
 
 	.filters button {
 		font-size: 0px;
-		height: 55px;
-		width: 55px;
+		height: 35px;
+		width: 35px;
 		border-radius: 100%;
 		margin-right: 5px;
 		background-image: url("../images/search.png");
@@ -105,10 +106,18 @@
 		background-position: 50% 50%;
 	}
 
+	.filter-subtitle {
+		display: none;
+	}
+
 	.locations,
 	.filters .amenities {
 		height: 100%;
 		width: 40%;
 		position: relative;
+	}
+
+	.popover {
+		margin-top: 45px;
 	}
 }
