--- a/web_static/styles/103-filters.css
+++ b/web_static/styles/103-filters.css
@@ -110,11 +110,16 @@
 @media only screen and (max-width: 769px) {
 	.filters {
 		border-radius: 40px;
+		height: 45px;
+	}
+
+	.filter-subtitle {
+		display: none;
 	}
 
 	.filters button {
-		height: 55px;
-		width: 55px;
+		height: 35px;
+		width: 35px;
 		border-radius: 100%;
 		margin-right: 5px;
 		background-color: #ff395c;
@@ -142,5 +147,9 @@
 		height: 100%;
 		width: 40%;
 		position: relative;
+	}
+
+	.popover {
+		margin-top: 45px;
 	}
 }
